[Spring 장바구니 - 2단계] 아키(허영운) 미션 제출합니다. (#162)
* feat: 현재 변경사항 저장

* feat: 현재 변경사항 저장

* feat: Product 및 CartItem 관련 기능 구현

* feat: 주문 기능 구현

* refactor: 더미데이터 비밀번호 암호화한 비밀번호로 수정

* feat: 주문 시 재고보다 많을 경우 에러를 출력하는 기능 구현

* feat: 더미데이터 업데이트

* chore: properties 설정 수정

* feat: JsonProperty 추가

* fix: 주문 시 상품 재고가 줄어들지 않았던 오류 해결

* feat: 주문 에러 발생 시 에러내용을 출력하도록 수정

* refactor: 트랜잭션 어노테이션 수정

* feat: 에러가 발생할 시 핸들링하도록 변경

* feat: 예외 컨트롤러에 반환타입 추가

* chore: DB 관련 설정 파일 수정

* refactor: 제네릭 타입을 모두 명시하도록 수정

* refactor: 사용하지 않는 객체 삭제

* refactor: OrderedProducts 객체 이름을 OrderedProduct로 수정

* refactor: CustomerService에 트랜잭션 어노테이션 적용

* refactor: Service, Repository 내 메서드 이름 수정

* test: 애플리케이션의 빈을 주입받도록 변경

* refactor: 존재하는 값인지 판단하는 메서드의 이름을 isExist로 수정

* refactor: quantity가 0 또는 음수일 경우 에러를 발생하도록 수정